<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/h148"
    android:background="@color/grayFA">

    <com.coco_sh.shmstore.widget.textView.IconTextView
        android:id="@id/tvIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/w70"
        android:text="@string/iconComplet"
        android:textColor="@color/iconColor"
        android:textSize="@dimen/w56"
        android:layout_marginStart="@dimen/w70" />

    <TextView
        android:id="@id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/w32"
        android:layout_toRightOf="@id/tvIcon"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/w43"
        android:layout_marginStart="@dimen/w32"
        android:layout_toEndOf="@id/tvIcon" />

    <com.coco_sh.shmstore.widget.textView.IconTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/w42"
        android:layout_alignRight="@id/tvIcon"
        android:text="@string/iconMore"
        android:textColor="@color/iconColor"
        android:textSize="@dimen/w33"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/tvIcon"
        android:layout_marginEnd="@dimen/w42" />
</RelativeLayout>