<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/w1025"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_rectangle_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="@dimen/w1025"
            android:layout_height="@dimen/h146"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/photoUpload"
            android:textColor="@color/gray6"
            android:textSize="@dimen/h44" />

        <View
            android:layout_width="@dimen/w952"
            android:layout_height="@dimen/h1"
            android:layout_gravity="center_horizontal"
            android:background="@color/grayE0" />

        <TextView
            android:id="@+id/tvSelect"
            android:layout_width="@dimen/w1025"
            android:layout_height="@dimen/h146"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/photoSelect"
            android:textColor="@color/gray6"
            android:textSize="@dimen/h44" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="@dimen/w1025"
        android:layout_height="@dimen/h146"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/h30"
        android:background="@drawable/shape_rectangle_top_white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/h44" />
</LinearLayout>
