<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h360"
            android:background="@color/white"
            android:paddingBottom="@dimen/h40"
            android:paddingLeft="@dimen/w50"
            android:paddingRight="@dimen/w50"
            android:paddingTop="@dimen/h40">

            <RelativeLayout
                android:id="@+id/rlProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <com.shoumei.xhn.widget.progress.ArcProgressBar
                    android:id="@+id/progressBar_big"
                    android:layout_width="@dimen/w260"
                    android:layout_height="@dimen/w260"
                    android:layout_gravity="center"
                    app:arc_stroke_width="@dimen/h10"
                    app:arc_progress="0"
                    app:arc_angle = "240"
                    app:arc_text_color = "@color/gray6"
                    app:arc_unfinished_color = "@color/grayE0"
                    app:arc_finished_color = "@color/red"
                    app:arc_bottom_text="@string/perfection"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/w90"
                android:layout_toEndOf="@+id/rlProgress"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/littleMaster"
                    android:textColor="@color/black"
                    android:textSize="@dimen/w43" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/archiveDesc"
                    android:textColor="@color/gray6"
                    android:textSize="@dimen/w37" />
            </LinearLayout>
        </RelativeLayout>

        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h30"
            app:nameText="头像">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@id/ivHead"
                android:layout_width="@dimen/w110"
                android:layout_height="@dimen/w110"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/w50"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                app:riv_oval="true"
                android:src="@drawable/defalut_updata_image" />
        </com.shoumei.xhn.widget.itemview.ItemShowView>

        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nameText="昵称"/>


        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nameText="真实姓名"/>


        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nameText="生日"/>


        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nameText="性别"/>



        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nameText="地区"/>


        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nameText="公司"/>


        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nameText="所属行业"/>


        <com.shoumei.xhn.widget.itemview.ItemShowView
            android:id="@+id/isvInteresting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nameText="兴趣爱好">

            <TextView
                android:id="@+id/tvInterestingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingStart="@dimen/w120"
                android:paddingEnd="@dimen/w50"
                android:text="@string/interestDesc"
                android:textColor="@color/red"
                android:textSize="@dimen/h40" />
        </com.shoumei.xhn.widget.itemview.ItemShowView>
    </LinearLayout>
</ScrollView>