<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:paddingLeft="@dimen/w123"
    android:paddingRight="@dimen/w123"
    android:paddingTop="@dimen/h178"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.coco_sh.shmstore.widget.edittext.SmEditText
            android:id="@+id/editPhone"
            style="@style/PhoneEidttextStyle"
            android:layout_height="@dimen/h175"
            android:background="@drawable/edit_text_bg"
            android:paddingLeft="@dimen/w120"
            android:paddingRight="@dimen/w10"
            android:textSize="@dimen/h44" />

        <com.coco_sh.shmstore.widget.textView.IconTextView
            android:layout_width="@dimen/w80"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/iconPhone"
            android:textColor="@color/iconColor"
            android:textSize="@dimen/w60" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlIdentifyCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlPhone"
        android:layout_marginTop="@dimen/h45">

        <com.coco_sh.shmstore.widget.edittext.SmEditText
            android:id="@+id/etIdentifyCode"
            style="@style/CodeEidttextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h175"
            android:background="@drawable/edit_text_bg"
            android:paddingLeft="@dimen/w120"
            android:paddingRight="@dimen/w120" />

        <com.coco_sh.shmstore.widget.textView.IconTextView
            android:layout_width="@dimen/w80"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/iconSms"
            android:textColor="@color/iconColor"
            android:textSize="@dimen/w60" />

        <com.coco_sh.shmstore.widget.button.TimerButton
            android:id="@+id/tbSend"
            style="@style/CodeButtonStyle"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlIdentifyCode"
        android:layout_marginTop="@dimen/h45">

        <com.coco_sh.shmstore.widget.edittext.SmEditText
            android:id="@+id/editPass"
            style="@style/PassEdittextStyle"
            android:layout_height="@dimen/h175"
            android:background="@drawable/edit_text_bg"
            android:paddingLeft="@dimen/w120"
            android:paddingRight="@dimen/w10"
            android:textSize="@dimen/h44" />

        <com.coco_sh.shmstore.widget.textView.IconTextView
            android:layout_width="@dimen/w80"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/iconPass"
            android:textColor="@color/iconColor"
            android:textSize="@dimen/w60" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tvProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rlPass"
        android:layout_marginTop="@dimen/h18"
        android:text="遇到其他问题?"
        android:textColor="@color/red"
        android:textSize="@dimen/h34" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/h3"
        android:layout_alignLeft="@id/tvProblem"
        android:layout_alignStart="@id/tvProblem"
        android:layout_below="@id/tvProblem"
        android:background="@color/red" />

    <Button
        android:id="@+id/btNext"
        style="@style/ButtonStyle"
        android:layout_below="@id/tvProblem"
        android:layout_marginTop="@dimen/h120"
        android:enabled="false"
        android:text="下一步" />

</RelativeLayout>

